--- a/package.json
+++ b/package.json
@@ -23,12 +23,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-beautiful-timeline": "^0.0.7",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-modal": "^11.9.0",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-tab-view": "^2.16.0",
+    "react-native-timeline-feed": "^2.0.0",
+    "react-native-timeline-flatlist": "^0.7.3",
+    "react-native-timeline-flatlist-mg": "^0.0.1",
+    "react-native-timeline-listview": "^0.2.3",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
