--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
@@ -32,6 +36,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-timeline-feed": "^2.0.0",
     "react-native-timeline-flatlist": "^0.7.3",
